# CodeHub

./: README.md
android/adb/: README.md
auto-test/: .gitignore  AGENTS.md  README.md  device.example.toml  pyproject.toml  pytest.ini
auto-test/cases/serial/: 101_serial_smoke.sh
auto-test/cases/ssh/: 001_health_check.sh  002_python_probe.py  helper_lib.sh
auto-test/src/device_case_framework/: __init__.py  result.py
auto-test/src/device_case_framework/transports/: __init__.py  base.py  serial.py  ssh.py
auto-test/tests/: conftest.py  test_script_cases.py
azure/az-acr/: Justfile
azure/az_function/: .gitignore  BlobTrigger1.cs  az_function.sln  local.settings.json
azure/az_function/Properties/: launchSettings.json
azure/devops-migrate/: Justfile  README.md
azure/devops-migrate/config/: projects.json
azure/devops-migrate/scripts/: 10-list-local-mirrors.sh  15-sync-local-mirrors.sh  20-create-repos-dst.sh  30-push-mirrors-dst.sh
c++/cpp20/: Makefile  example_coroutine.cpp  logger.cpp  logger.h
c++/small_size/: logger.cpp  logger.h
edge-probe/: .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  Dockerfile.arm64-cross  README.md  cmd.txt
edge-probe/cmake/toolchains/: aarch64-linux-gnu.cmake
edge-probe/docs/: architecture.md  arm64-cross.md  metrics.md  victoriametrics-smoke.md
edge-probe/include/edge_probe/: collectors.h  curl_http_transport.h  telemetry_sender.h
edge-probe/src/: collectors.cpp  curl_http_transport.cpp  telemetry_sender.cpp  vm_fixture_sender_main.cpp
edge-probe/tests/: test_main.cpp
embedded/i2c/: Makefile  smbus_i2c.cpp
music/: cue_cp936_to_utf-8.sh  cue_to_mp3s.sh  rename_mp3_utf8.py
web/: response_bootstrap.html
web_spider/: README.md  us_visa_wait_time.py
