[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "device-pytest-framework"
version = "0.1.0"
description = "Lightweight pytest framework for running bash/python test cases over SSH or serial."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pytest>=8.0",
  "paramiko>=3.4",
  "pyserial>=3.5",
  "pexpect>=4.9",
  "tomli>=2.0; python_version < '3.11'",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
